assets/css/_stop-bubbles.scss
$location-line-width: $space-6;

@mixin stop-bubble-mode-color($class, $color) {
  // Changes the color for the stop bubble based on the route type
  #{$class} {
    .route-branch-stop-bubble-line,
    .route-branch-indent-start {
      background-color: $color;
    }
  }
}

.route-branch-stop {
  align-items: stretch;
  display: flex;
  flex: 1 1 0%;
  overflow: visible; // if set to hidden, site works better in IE10, but then circles are slightly cropped everywhere
  width: 100%;
}

.route-branch-stop-prediction {
  text-align: right;
}

.route-branch-headsign-wrapper {
  display: inline-flex;
  max-width: 14rem;

  @include media-breakpoint-only(sm) {
    max-width: 23rem;
  }

  @include media-breakpoint-only(md) {
    max-width: 21rem;
  }

  @include media-breakpoint-only(lg) {
    max-width: 28rem;
  }

  @include media-breakpoint-only(xxl) {
    max-width: 32rem;
  }
}

.route-branch-headsign {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.route-branch-stop-bubbles {
  align-items: stretch;
  display: inline-block; // for non-flex browsers
  display: flex;
  flex: 0 0 auto;
  justify-content: flex-start;
  overflow: visible;
  padding-right: $base-spacing;
}

.personal-itinerary {
  .route-branch-stop-bubble-line {
    background-color: $black;
    width: 1px;
  }
}

.route-branch-stop-bubble {
  align-items: center;
  display: inline-block;
  display: flex;
  flex-direction: column;
  overflow: visible;
  position: relative;
  width: $icon-size;

  &.stop {
    margin-top: -1px;
  }

  &.transfer {
    circle {
      stroke-width: $space-6;
    }
  }

  &.merge:last-child {
    .route-branch-stop-bubble-line.direction-1,
    .merge-stop-spacer {
      flex: 0 0 calc(#{$base-spacing} / 2);
      min-height: calc(#{$base-spacing} / 2);
    }
  }

  svg {
    height: 1.5rem;
    overflow: visible;
    position: relative;
    transform: translate(.5px, 1px);
    vertical-align: top;
    width: 1.5rem;
  }

  text {
    font-weight: bold;
    transform: translate(-2px, 0);
  }

  .terminus-circle {
    background-color: $gray-dark;
    border-radius: 100%;
    color: $white;
    height: $icon-size;
    text-align: center;
    width: $icon-size;
  }
}

.stop-bubble-stop {
  circle {
    fill: $white;
    stroke: $gray-dark;
    stroke-width: $space-2;
  }
}

.route-branch-stop-bubble-line {
  border-width: 0;
  display: none; // hide on non-flex browsers
  display: flex;
  flex: 1 0 0%;
  min-height: 1rem;
  width: $location-line-width;

  &.above {
    flex: 0 0 calc(#{$base-spacing} / 4);
    min-height: 0;
  }
}

.route-branch-stop-info {
  border-bottom: $border;
  display: inline-block; // for non-flex browsers
  display: flex;
  flex: 1 1 0%;
  flex-direction: column;
  margin-bottom: $base-spacing;
  width: 60%; // for non-flex browsers
}

.route-branch-destination {
  border-bottom-width: 0;
}

@include media-breakpoint-down(sm) {
  .green-line {
    .route-branch-stop-icons {
      display: block;
      padding-bottom: calc(#{$base-spacing} / 2);
    }
  }
}

.toggle-detail-list {
  align-items: center;
  color: $gray-dark;
  display: flex;
  justify-content: space-between;
  padding-bottom: .75rem;
  padding-top: .5rem;
  text-align: left;
  width: 100%;

  &:hover {
    text-decoration: none;
  }

  &:focus {
    text-decoration: none;
  }
}

.expand-show-details {
  color: $brand-primary;

  &:hover {
    text-decoration: underline;
  }
}

.expand-link-stop-text {
  flex: 1 1 auto;
  max-width: 80%;
  // .btn has white-space: nowrap set. We need to override this to allow the stop text to wrap
  white-space: normal;
}

.expand-branch-link-icon {
  color: $brand-primary;
  flex: 0 0 auto;
}

@include media-breakpoint-only(xs) {
  .route-branch-stop-link {
    display: block;
  }
}

.route-branch-stop-name {
  font-weight: bold;
}

.route-branch-stop-name-icons,
.route-branch-stop-links {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;

  > div {
    display: inline-block;
    flex: 1 1 0%;
  }

  .route-branch-stop-icons {
    display: flex;
    flex: 0 0 auto;
    text-align: right;

    svg {
      // required for icons to be displayed on IE 10+
      flex: 0 0 auto;
      margin-left: calc(#{$base-spacing} / 8);
    }
  }
}

.route-branch-indent-start {
  align-self: flex-start;
  height: $location-line-width;
  width: calc((#{$icon-size} / 2) + (#{$location-line-width} / 2));

  .solid {
    height: $location-line-width;
  }
}

.schedule-link {
  padding-right: $base-spacing;

  .commuter-rail & {
    display: none;
  }
}

.route-branch-stop-link {
  display: inline-block;
}

.route-branch-stop-zone {
  margin-bottom: calc(#{$base-spacing} / 4);
  margin-top: calc(#{$base-spacing} / 4);
}

.vehicle-bubble {
  height: $base-spacing;
  left: 0;
  position: relative;
  top: 0;
  // vehicle SVGs are currently sized incorrectly
  // (circle is rendered inside of SVG and svg is too small);
  // this is a temporary fix until we get new assets -KH
  transform: scale(1.2);
  z-index: $z-index-stop-bubble;
}

.route-branch-warning-icon {
  margin-left: $space-8;
}

.route-branch-stop-disabled {
  color: $gray-lighter;
}

.route-branch-stop-icons {
  @include icon-size(1.5rem);

  [class*='c-svg__icon'] {
    margin-left: calc(#{$base-spacing} / 4);
  }
}

.vehicle-bubble__green {
  height: 1.3125 * $base-spacing;
  width: 1.3125 * $base-spacing;
}

@include stop-bubble-mode-color('.commuter-rail', $brand-commuter-rail);
@include stop-bubble-mode-color('.red-line', $brand-red-line);
@include stop-bubble-mode-color('.mattapan-line', $brand-red-line);
@include stop-bubble-mode-color('.blue-line', $brand-blue-line);
@include stop-bubble-mode-color('.orange-line', $brand-orange-line);
@include stop-bubble-mode-color('.green-line', $brand-green-line);
@include stop-bubble-mode-color('.green-line-b', $brand-green-line);
@include stop-bubble-mode-color('.green-line-c', $brand-green-line);
@include stop-bubble-mode-color('.green-line-d', $brand-green-line);
@include stop-bubble-mode-color('.green-line-e', $brand-green-line);
@include stop-bubble-mode-color('.bus', $brand-bus);
@include stop-bubble-mode-color('.logan-express', $brand-logan-express);
@include stop-bubble-mode-color('.massport-shuttle', $brand-massport-shuttle);
@include stop-bubble-mode-color('.silver-line', $brand-silver-line);
@include stop-bubble-mode-color('.ferry', $brand-ferry);
@include stop-bubble-mode-color('.personal-itinerary', $gray-dark);

